--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+
+
     <uses-permission
         android:name="android.permission.BIND_APPWIDGET"
         android:protectionLevel="signature|privileged"
@@ -19,6 +21,16 @@
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.HostAppWidgetsPoc">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".WidgetHostExampleActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.HostAppWidgetsPoc">
